[fix] sonarQube 품질 이슈 오류 적용